// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBuffers() should get buffers 1`] = `
Object {
  "@raw": Object {
    "activity": false,
    "input": Object {
      "dirtyValue": "",
      "history": Object {
        "index": 0,
        "values": Array [],
      },
      "value": "",
    },
    "messages": Array [],
  },
  "@status": Object {
    "activity": false,
    "input": Object {
      "dirtyValue": "",
      "history": Object {
        "index": 0,
        "values": Array [],
      },
      "value": "",
    },
    "messages": Array [],
  },
}
`;

exports[`getServerFactory() should get "getServer" selector 1`] = `
Object {
  "buffers": Object {
    "@raw": Object {
      "activity": false,
      "input": Object {
        "dirtyValue": "",
        "history": Object {
          "index": 0,
          "values": Array [],
        },
        "value": "",
      },
      "messages": Array [],
    },
    "@status": Object {
      "activity": false,
      "input": Object {
        "dirtyValue": "",
        "history": Object {
          "index": 0,
          "values": Array [],
        },
        "value": "",
      },
      "messages": Array [],
    },
  },
  "lag": 0,
  "modes": Object {
    "available": Object {
      "channel": Array [],
      "user": Array [],
    },
    "user": Array [],
  },
  "name": "<unknown>",
  "user": Object {
    "nick": "default_nick",
    "real": "default_name",
    "user": "default_user",
  },
}
`;
